fix the image scaling on desktop jump menu

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -524,6 +524,7 @@ em {
 .card img {
     height: 90px;
     width: auto;
+    object-fit: scale-down;
 }
 
 .card {
